# The-Architect

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
penstream/: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  README.md  build.bat  config.json  vcpkg.json
penstream/.github/workflows/: release.yml
penstream/android/: gradle.properties  gradlew  gradlew.bat  settings.gradle
penstream/android/app/: build.gradle  proguard-rules.pro
penstream/android/app/src/main/: AndroidManifest.xml
penstream/android/app/src/main/cpp/: CMakeLists.txt  input_capture.cpp  input_capture.h  jni_interface.cpp  network_client.cpp  network_client.h  renderer.cpp  renderer.h  video_decoder.cpp  video_decoder.h
penstream/android/app/src/main/java/com/penstream/app/: ConnectionManager.kt  MainActivity.kt  PenStreamService.kt  ServerInfo.kt  SettingsActivity.kt  StreamingActivity.kt
penstream/android/app/src/main/res/drawable/: ic_launcher.xml
penstream/android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  activity_streaming.xml
penstream/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
penstream/docs/: architecture.md  protocol_spec.md
penstream/scripts/: build_android.bat  build_server.bat  sign_apk.bat
penstream/server/: CMakeLists.txt
penstream/server/src/: main.cpp
penstream/server/src/capture/: dxgi_capturer.cpp  dxgi_capturer.h  frame_pool.cpp  frame_pool.h
penstream/server/src/config/: config_loader.cpp  config_loader.h
penstream/server/src/encode/: amf_encoder.cpp  amf_encoder.h  encoder_interface.h  nvenc_encoder.cpp  nvenc_encoder.h
penstream/server/src/input/: input_handler.cpp  input_handler.h  virtual_input.cpp  virtual_input.h
penstream/server/src/network/: packet_builder.cpp  packet_builder.h  udp_transport.cpp  udp_transport.h  webrtc_server.cpp  webrtc_server.h
src/: App.css  App.jsx  index.css
src/components/: InstrumentPlayer.css  InstrumentPlayer.jsx  PitchEditor.css  PitchEditor.jsx  Recorder.css  Recorder.jsx
src/utils/: pitchUtils.js
